<resources>
    <string name="app_name">Tpaga</string>
    <string name="app_name_depp_link">Tpaga Compras</string>
    <string name="compras_y_servicios">COMPRAS Y SERVICIOS</string>
    <string name="hola">¡Hola!</string>
    <string name="realiza_tus_pagos_y_conpras_tranquilamente">Realiza tus pagos y conpras tranquilamente.</string>
    <string name="nosotros_hacemos_que_sea_seguro_y_m_y_f_cil_para_ti">Nosotros hacemos que sea seguro y múy fácil para
        ti
    </string>
    <string name="imagen_personas_con_celular">Imagen Personas con celular</string>
    <string name="descripci_n_del_producto">Descripción del producto</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="comprar">Comprar</string>
    <string name="estado">Estado</string>
    <string name="descripci_n_de_la_compra">Descripción de la compra</string>
    <string name="no_se_ha_realizado_ninguna_compra_por_el_momento">No se ha realizado ninguna compra por el momento
    </string>

</resources>
