<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.modules.main.ui.productLink.ProductLinkActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:layout_margin="10dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:text="@string/descripci_n_de_la_compra"
                android:layout_gravity="center"
                android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <LinearLayout
                android:padding="20dp"
                android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView
                    android:text="@string/descripci_n_del_producto"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    tools:text="Compra de producto 1"
                    android:id="@+id/purchase_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <View android:layout_width="match_parent" android:background="@color/greyc3" android:layout_height="2dp"/>

        <LinearLayout
                android:padding="20dp"
                android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView
                    android:text="@string/precio_del_producto"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    tools:text="15000"
                    android:id="@+id/purchase_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <View android:layout_width="match_parent" android:background="@color/greyc3" android:layout_height="2dp"/>

        <LinearLayout
                android:padding="20dp"
                android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView
                    android:text="@string/estado"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"/>
            <TextView
                    android:textSize="25sp"
                    android:textColor="@color/black"
                    tools:text="Pagado"
                    android:id="@+id/purchase_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:layout_margin="20dp"
            android:id="@+id/btnGoTOHome"
            android:layout_gravity="end|bottom"
            android:src="@drawable/ic_home_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
</FrameLayout>
